<resources>
    <string name="app_name">cs465_project</string>
    <string name="data_output_name">Export Data</string>

    <string-array name="syncFrequency">
        <item name="1">Once a day</item>
        <item name="7">Once a week</item>
        <item name="3">Once a year</item>
        <item name="0">Never (Update maually)</item>
    </string-array>
    <string-array name="syncFrequencyValues">
        <item name="1">1</item>
        <item name="7">7</item>
        <item name="30">30</item>
        <item name="0">0</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="default_app">"Facebook"</string>

    <string-array name="app_list">
        <item>Facebook</item>
        <item>Snapchat</item>
        <item>Instagram</item>
        <item>Twitter</item>
        <item>Flappy Bird</item>
        <item>Prism</item>
        <item>Settings</item>
        <item>Text</item>
        <item>Phone</item>
        <item>Groupme</item>
    </string-array>

    <string name="mod_button1_text">52 Unlocks</string>
    <string name="mod_button2_text">6 Calls Made</string>
    <string name="mod_button3_text">41 Texts Sent</string>


    <string name="title_first_section">General Settings</string>
    <string name="title_checkbox_preference">title_checkbox_preference</string>
    <string name="default_checkbox_preference">default_checkbox_preference</string>
    <string name="title_edittext_preference">title_edittext_preference</string>
    <string name="summary_edittext_preference">summary_edittext_preference</string>
    <string name="dialog_title_edittext_preference">dialog_title_edittext_preference</string>
    <string name="title_second_section">Notification</string>
    <string name="title_list_preference">Rollover time</string>
    <string name="title_list_preference2">Export file type</string>
    <string name="rollover_title">Rollover time</string>
    <string name="exportfile_title">Export File type</string>
    <string-array name="roll_over_time_list">
        <item>1 Day</item>
        <item>1 Week</item>
        <item>1 Month</item>
    </string-array>
    <string-array name="export_file_type_list">
        <item>.csv</item>
        <item>.xsl</item>
        <item>.xml</item>
    </string-array>
    <string-array name="notification_type_list">
        <item>off</item>
        <item>push notification</item>
        <item>drop-down notification</item>
    </string-array>
    <string-array name="theme_type_list">
        <item>Dark</item>
        <item>Bright</item>
        <item>Colorful</item>
    </string-array>
    <string name="title_intent_preference">title_intent_preference</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string-array name="dayWeekMenu">
        <item name="day">day</item>
        <item name="week">week</item>
        <item name="month">month</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
