<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="list_preference"
        android:title="@string/title_list_preference"
        android:dialogTitle="@string/rollover_title"
        android:entries="@array/roll_over_time_list"
        android:entryValues="@array/roll_over_time_list" />
    <ListPreference
        android:key="list_preference"
        android:title="@string/title_list_preference2"
        android:dialogTitle="@string/exportfile_title"
        android:entries="@array/export_file_type_list"
        android:entryValues="@array/export_file_type_list" />
    <ListPreference
        android:key="list_preference"
        android:title="Themes"
        android:entries="@array/theme_type_list"
        android:entryValues="@array/theme_type_list"/>
    <Preference
        android:title="Parental Control">
        <intent android:action="com.cs465.uiuc.cs465_project.ParentalControl" />
    </Preference>
    <ListPreference
        android:key="list_preference"
        android:title="Notification"
        android:dialogTitle="Notification"
        android:entries="@array/notification_type_list"
        android:entryValues="@array/notification_type_list" />
    <Preference
        android:title="About"
        android:id="@+id/preference">
        <intent android:action="com.cs465.uiuc.cs465_project.About" />
    </Preference>


</PreferenceScreen>