<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.cs465.uiuc.cs465_project.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:text="Favorites"
        android:gravity="center"/>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="fill_parent"
        android:focusable="true"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="2dp"
        android:background="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent"
        android:divider="#CCCCCC"
        android:dividerHeight="1dp"
        android:paddingLeft="2dp">

    </ListView>

    <TextView
        android:id="@+id/mod_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:text="Daily Stats"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2">

        <ImageButton
            android:id="@+id/modular_button1"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#0000"
            android:onClick="modButton1"
            android:src="@drawable/ic_lock_open_black_24dp"/>
        <ImageButton
            android:id="@+id/modular_button2"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:onClick="modButton2"
            android:src="@drawable/ic_phone_in_talk_black_24dp"/>
        <ImageButton
            android:id="@+id/modular_button3"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:onClick="modButton3"
            android:src="@drawable/ic_question_answer_black_24dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/modular_text1"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:text="@string/mod_button1_text"/>

        <TextView
            android:id="@+id/modular_text2"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:text="@string/mod_button2_text"/>

        <TextView
            android:id="@+id/modular_text3"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:text="@string/mod_button3_text"/>

    </LinearLayout>

    <TextView
        android:id="@+id/current_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:text="@string/default_app"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="8">

        <ImageView
            android:id="@+id/left_arrow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>
        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart"
            android:layout_weight="14"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <ImageView
            android:id="@+id/right_arrow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

</LinearLayout>